delivery-service/delivery/api/src/main/java/org/example/delivery/api/common/error/ErrorCode.java
package org.example.delivery.api.common.error;

public interface ErrorCode {

    Integer getHttpStatusCode();
    Integer getErrorCode();
    String getDescription();
}
